--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "type": "module",
   "name": "linked-list",
   "version": "1.0.0",
   "description": "Linked List",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
