Add append, size, findHead, findTail functions, add tests for new functions

--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
   "homepage": "https://github.com/DWYLau/linked-list#readme",
   "devDependencies": {
     "jest": "^29.7.0"
-  }
+  },
+  "code-runner.runInTerminal": "true"
 }
